# tpm2-rs

./: Cargo.toml  README.md  notes.md  tpm2b_notes.txt  tpm_ptp_notes.txt
core/: Cargo.toml
core/src/: constants.rs  data.rs  error.rs  lib.rs  structs.rs
derive/: Cargo.toml
derive/src/: expansions.rs  lib.rs
examples/: getrandom.rs  read_clock.rs  read_pcrs.rs  read_public.rs
old_tests/: basic_commands.rs
os/: Cargo.toml
os/src/: lib.rs
simulator/: Cargo.toml  README.md  build.rs
simulator/src/: api.rs  global.rs  lib.rs  traits.rs
src/: Command_Listing_1.59.txt  auth.rs  buf.rs  command.rs  commands.rs  error.rs  ext.rs  lib.rs  marshal.rs  polyfill.rs  run.rs  traits.rs
src/commands/: mod.rs  structs.rs
src/data/: mod.rs  traits.rs
src/driver/: linux.rs  mod.rs  os.rs  other.rs  windows.rs
src/os/: linux.rs  mod.rs  windows.rs
src/raw/: attributes.rs  constants.rs  mod.rs  structs.rs  tpm.rs  traits.rs  unions.rs  util.rs
src/types/: auth.rs  buffer.rs  mod.rs  tpm.rs  tpm2b.rs  tpma.rs  tpmi.rs  tpml.rs  tpms.rs  tpmt.rs  tpmu.rs
tests/: basic_commands.rs
tpm_core/: Cargo.toml
tpm_core/src/: data.rs  error.rs  lib.rs  structs.rs
tpm_os/: Cargo.toml
tpm_os/src/: lib.rs
