[package]
name = "tpm2"
version = "0.1.0"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/josephlr/tpm-rs"
documentation = "https://docs.rs/tpm2"
homepage = "https://github.com/josephlr/tpm-rs"
description = "Pure Rust TPM2 TSS"
keywords = ["tpm", "tss", "tpm2"]
categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
cfg-if = "1.0"

[workspace]
members = ["derive", "simulator"]
