[package]
name = "tpm2"
version = "0.0.3"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/josephlr/tpm2-rs"
documentation = "https://docs.rs/tpm2"
homepage = "https://github.com/josephlr/tpm2-rs"
description = "Pure Rust TPM2 TSS"
keywords = ["tpm", "tss", "tpm2"]
categories = ["cryptography", "no-std"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
cfg-if = "1.0"
bitflags = "1"

[workspace]
members = ["derive", "simulator"]
