[package]
name = "tpm_core"
version = "0.1.0"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/josephlr/tpm"
documentation = "https://docs.rs/tpm"
homepage = "https://github.com/josephlr/tpm"
description = "Low-Level bindings to the TPM2"
keywords = ["tpm", "tss", "tpm2"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]
