[package]
name = "tpm-simulator"
version = "0.1.0"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/josephlr/tpm"
documentation = "https://docs.rs/tpm"
homepage = "https://github.com/josephlr/tpm"
description = "Bindings to Microsfot refrence TPM2 simulator"
keywords = ["tpm", "tpm2", "simulator"]
categories = ["cryptography", "no_std"]

[dependencies]
tpm = { path = "..", default-features = false }
once_cell = { version = "1.0.1", optional = true }

[features]
default = ["std"]
std = ["once_cell", "tpm/std"]

[build-dependencies]
cc = { version = "1.0.42", features = ["parallel"] }
glob = "0.3.0"
