[package]
name = "tpm2_simulator"
version = "0.0.1"
authors = ["Joe Richey <joerichey94@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/josephlr/tpm-rs"
documentation = "https://docs.rs/tpm2_simulator"
homepage = "https://github.com/josephlr/tpm-rs"
description = "Bindings to Microsfot refrence TPM2 simulator"
keywords = ["tpm", "tpm2", "simulator"]
categories = ["cryptography", "no_std"]

[dependencies]
# tpm = { path = "..", default-features = false }
getrandom = { version = "0.1", optional = true }

[dev-dependencies]
once_cell = "1.3"

[features]
default = ["std", "getrandom"]
std = []
# std = ["once_cell", "tpm/std"]

[build-dependencies]
cc = { version = "1.0.42", features = ["parallel"] }
glob = "0.3.0"
